beta home page (bug :flex-wrap is not done)

--- a/Dina's Pj Version1.0/Css/RainNavi.css
+++ b/Dina's Pj Version1.0/Css/RainNavi.css
@@ -110,7 +110,7 @@
     width: 96%;
     height: 450px;
     margin: 10px 1.8%;
-    margin-bottom: 5px;
+    /* margin-bottom: 8px; */
     background-color: #421009;
     display: flex;
     align-items: center;
@@ -141,16 +141,28 @@
 
   .catebox{
     width: 96%;
-     
+    height: auto;
     margin: 1% 1.8%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+    /* background-color: #D3CFC3; */
+    /* border-radius: 20px; */
   }
-  
+  /* .catTitle{
+    color: white;
+    font-size: 45px;
+    font-weight: 600;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin: 20px 0px;
+    /* margin-top: 25px; 
+    margin-left: 47px;
+  } */
   .oneByfive{
     width: 18%;
     height: 120px;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color:  rgba(0, 0, 0, 0.323);
     display: flex;
     justify-content: space-between;
@@ -163,7 +175,7 @@
   .twoByfive{
     width: 18%;
     height: 120px;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color:  rgba(0, 0, 0, 0.323);
     display: flex;
     justify-content: space-between;
@@ -176,7 +188,7 @@
   .threeByfive{
     width: 18%;
     height: 120px;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color:  rgba(0, 0, 0, 0.323);
     display: flex;
     justify-content: space-between;
@@ -189,7 +201,7 @@
   .fourByfive{
     width: 18%;
     height: 120px;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color:  rgba(0, 0, 0, 0.323);
     display: flex;
     justify-content: space-between;
@@ -202,7 +214,7 @@
   .fiveByfive{
     width: 18%;
     height: 120px;
-    border-radius: 5px;
+    border-radius: 15px;
     background-color: rgba(0, 0, 0, 0.323);
     display: flex;
     justify-content: space-between;
@@ -225,11 +237,57 @@
    font-size: 23px;
    font-weight: 600;
    color: #d3cfc396;
+   /* color: black; */
    box-sizing: border-box;
    margin-right: 8px;
    /* background-color: aqua;*/
   } 
 /* Explore Myanmar Foods with us End */
+
+
+/* <!-- About Myanmar food START--> */
+.aboutfoodContainer{
+    width: 100%;
+    height: auto;
+}
+.aboutfood{
+    width: 92%;
+    height: 650px;
+    margin: 0px 50px;
+    display: flex;
+    justify-content: flex-between;
+    /* background-color:aquamarine; */
+}
+.aboutfoodcaption{
+    width: 50%;
+    height: 700px;
+    /* background-color: #4d4d4d; */
+    padding: 9% 20px;
+}
+.aboutfoodcaption pre{
+    color: white;
+    font-size: 29px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 50px;
+    margin:55px 5%;
+}
+.aboutfoodcaption h2{
+    font-size:70px;
+    margin-bottom: 10px;
+    font-family:Arial, Helvetica, sans-serif;
+    margin-left: 4%;
+    color: white;
+    margin-top: 30px;
+} 
+.aboutfoodphotocontainer{
+    width: 650px;
+    height: 550px;
+    margin: 73px 0px;
+    background-color: black;
+}
+
+
+/* <!-- About Myanmar food END--> */
 
 /* Most start*/
 
@@ -271,8 +329,16 @@
     width: 400px;
     height: 30px;
     display: flex;
-    margin-left: 5%;
+    margin-left: 10%;
     margin-top: 60px;
+}
+.borderbox{
+    width: 400px;
+    height: 30px;
+    display: flex;
+    /* margin-left: 9%; */
+    margin-left: 7%;
+    margin-top: 5.5%;
 }
  .mosta{
     width: 12px;
@@ -301,22 +367,59 @@
     margin-left: 8px;
 }
 .mostb2 a{
-    
     margin-bottom: 10px;
 }
 /* Edited enddd */
 
 /* Most end*/
-
-.br{
-   height: 1px;
-   border-bottom: 7px dashed gray;
-   width: 89%;
-   margin: 0% 5%;
+.background{
+    width: 96%;
+    margin: 0px 1.8%;
+    height: 450px;
+    background-image:url() ;
+    background-color: #405848;
 }
 
 
-
+.br{
+   border-bottom: 5px dashed rgb(78, 78, 78);
+   width: 89%;
+   margin: 0% 5%;
+}
+.line{
+   border-bottom: 5px solid rgb(61, 61, 61);
+   width: 85%;
+   margin: 0% 7%;
+}
+.URF{
+    width: 85%;
+    margin: 2% 7%;
+}
+.gotorecipe1 ,.gotorecipe2{
+    text-align: right;
+    margin-right: 120px;
+    margin-bottom: 5%;
+    
+}
+.gotorecipe2{
+    margin-right: 110px;
+}
+.gotorecipe1 a,.gotorecipe2 a {
+    font-size: 16px;
+    font-weight: 600;
+    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: #D3CFC3;
+    width: 100px;
+    height: 40px;
+    box-sizing: border-box;
+    padding: 4px 8px;
+    background-color: transparent;
+    border-radius: 10px;
+}
+/* .gotorecipe1 a:hover,.gotorecipe2 a:hover{
+border: 2px solid white;
+}   */
 /* card start*/
 
 /* origin ##### */
@@ -395,11 +498,23 @@
     border-radius: 5px;
     width: 79%;
     box-sizing: border-box;
-    margin-bottom: 6%;
-    
+    margin-bottom: 1%;
 }
+.bordercardcontainer{
+    justify-content: space-between;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 0px;
+    margin:2% 7%;
+    border-radius: 5px;
+    width: 87%;
+    box-sizing: border-box;
+    margin-bottom: 3%;
+}
+
 .imgstext:hover{
-    transform: translateY(-10px) ;
+    transform: translateY(-20px) ;
     transition-duration: 0.3s;
 }
 .imgstext{ 
@@ -416,6 +531,9 @@
     box-sizing: border-box;
     gap: 3px;
 } 
+.urfcard{
+background-color:transparent;
+}
 .contents{ 
     width:94%;
     /* height: 157px;  */
@@ -425,11 +543,28 @@
     border-radius: 30px 30px 0px 0px ;
     object-fit:cover;
 }
+.img{
+    border-radius: 50%;
+    width: 87%;
+    height: 80%;
+    margin: 7%;
+}
 .imgtextbcg{
     background-color: #405848;
     height: 50px;
     margin-top: 0px;
     border-radius: 0px 0px 20px 20px; 
+}
+.urftext{
+    width: 87%;
+    border-radius: 50px;
+    margin: 0px 16px;
+    background-color: #2b262437;
+    padding: 2px 0px;
+    box-sizing: border-box;
+    border-left: 4px solid #405848;
+    border-right: 4px solid #405848;
+    border-bottom: 4px solid  #405848;
 }
 p{
      /* font-weight: 600; */
